ListToMap_Fix